# geospatial-benchmarking-protocol

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile.backend  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml
backend/: pyproject.toml
backend/src/gbp/: __init__.py
frontend/: Dockerfile  index.html  package.json  vite.config.ts
frontend/src/: App.tsx  color-mode-context.ts  color-mode.tsx  main.tsx  theme.ts  use-color-mode.ts
frontend/src/api/: datasets.ts  results.ts  types.ts
frontend/src/components/: Layout.tsx
frontend/src/pages/: DatasetDetail.tsx  Datasets.tsx  Home.tsx  ResultDetail.tsx  Results.tsx
